apps/cli/src/tui/snapshots/fleet_no_agent_100x24_es.snap
---
source: apps/cli/src/tui/view.rs
expression: snap
---
 shop · ✔ en vivo · motor observando · actúas como tú                                    ⚡ –  ⛔ –
┏━ › Flota · ↑↓ respecto a main (copia local, fetch hace 3 h) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃     Agente                    Rama                               Arch. ↑↓          Actividad     ┃
┃  ○  Sin agente · shop         main                               ~0    ↑0 ↓0       no disponible ┃
┃  ●  Claude Code · feat-pagos  feat-pagos                         ~2    ↑3 ↓1       hace 2 min    ┃
┃  ○  Sin agente · feat-docs    feat-docs                          ~0    ↑1 ↓0       no disponible ┃
┃  ○  Sin agente · scratch      39e852f (sin rama) · temporal      ~1    ↑0 ↓0       no disponible ┃
┃                                                                                                  ┃
┃                                                                                                  ┃
┃                                                                                                  ┃
┃                                                                                                  ┃
┃                                                                                                  ┃
┃                                                                                                  ┃
┃                                                                                                  ┃
┃                                                                                                  ┃
┃                                                                                                  ┃
┃                                                                                                  ┃
┃                                                                                                  ┃
┃                                                                                                  ┃
┃                                                                                                  ┃
┃                                                                                                  ┃
┃                                                                                                  ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 r reintentar   ○ sin agente: cambios tuyos o de otra herramienta                           q salir
=== styles ===
0:0-0 bg=#3a3a3a
0:1-4 bg=#3a3a3a BOLD
0:5-7 fg=#949494 bg=#3a3a3a
0:8-8 fg=#3fb950 bg=#3a3a3a
0:9-9 bg=#3a3a3a
0:10-35 fg=#3fb950 bg=#3a3a3a
0:36-38 fg=#949494 bg=#3a3a3a
0:39-88 bg=#3a3a3a
0:89-89 fg=#d29922 bg=#3a3a3a
0:91-91 bg=#3a3a3a
0:92-92 fg=#d29922 bg=#3a3a3a BOLD
0:93-94 bg=#3a3a3a
0:95-95 fg=#f85149 bg=#3a3a3a
0:97-97 bg=#3a3a3a
0:98-98 fg=#f85149 bg=#3a3a3a BOLD
0:99-99 bg=#3a3a3a
1:0-4 fg=#ffe066
1:5-60 fg=#ffe066 BOLD
1:61-99 fg=#ffe066
2:0-0 fg=#ffe066
2:6-11 fg=#949494 BOLD
2:32-35 fg=#949494 BOLD
2:67-71 fg=#949494 BOLD
2:73-74 fg=#949494 BOLD
2:85-93 fg=#949494 BOLD
2:99-99 fg=#ffe066
3:0-0 fg=#ffe066
3:3-3 fg=#949494
3:6-22 fg=#949494
3:32-35 fg=#949494
3:67-68 fg=#949494
3:73-77 fg=#949494
3:85-97 fg=#949494
3:99-99 fg=#ffe066
4:0-0 fg=#ffe066
4:3-3 fg=#3fb950
4:6-29 fg=#e69f00 BOLD
4:67-68 fg=#d29922
4:85-94 fg=#949494
4:99-99 fg=#ffe066
5:0-0 fg=#ffe066
5:3-3 fg=#949494
5:6-27 fg=#949494
5:32-40 fg=#949494
5:67-68 fg=#949494
5:73-77 fg=#949494
5:85-97 fg=#949494
5:99-99 fg=#ffe066
6:0-0 fg=#ffe066
6:3-3 fg=#949494
6:6-25 fg=#949494
6:32-49 fg=#d29922
6:51-60 fg=#949494
6:67-68 fg=#d29922
6:73-77 fg=#949494
6:85-97 fg=#949494
6:99-99 fg=#ffe066
7:0-0 fg=#ffe066
7:99-99 fg=#ffe066
8:0-0 fg=#ffe066
8:99-99 fg=#ffe066
9:0-0 fg=#ffe066
9:99-99 fg=#ffe066
10:0-0 fg=#ffe066
10:99-99 fg=#ffe066
11:0-0 fg=#ffe066
11:99-99 fg=#ffe066
12:0-0 fg=#ffe066
12:99-99 fg=#ffe066
13:0-0 fg=#ffe066
13:99-99 fg=#ffe066
14:0-0 fg=#ffe066
14:99-99 fg=#ffe066
15:0-0 fg=#ffe066
15:99-99 fg=#ffe066
16:0-0 fg=#ffe066
16:99-99 fg=#ffe066
17:0-0 fg=#ffe066
17:99-99 fg=#ffe066
18:0-0 fg=#ffe066
18:99-99 fg=#ffe066
19:0-0 fg=#ffe066
19:99-99 fg=#ffe066
20:0-0 fg=#ffe066
20:99-99 fg=#ffe066
21:0-0 fg=#ffe066
21:99-99 fg=#ffe066
22:0-99 fg=#ffe066
23:1-1 fg=#2dc2ad BOLD
23:16-16 fg=#949494
23:18-64 fg=#949494
23:92-92 fg=#2dc2ad BOLD
