apps/cli/src/tui/snapshots/repo_picker_80x24.snap
---
source: apps/cli/src/tui/view.rs
expression: snap
---
 no repo selected · ✔ live · engine observing · acting as you        ⚡ –  ⛔ –
┏━ › Observed repos ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃ This folder is not in an observed repo: choose one.                          ┃
┃                                                                              ┃
┃ › shop  /w/shop/.git                                                         ┃
┃   blog  /w/blog/.git                                                         ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┃                                                                              ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 r retry  ↑ up  ↓ down  Enter open                                       q quit
=== styles ===
0:0-0 bg=#3a3a3a
0:1-16 bg=#3a3a3a BOLD
0:17-19 fg=#949494 bg=#3a3a3a
0:20-20 fg=#3fb950 bg=#3a3a3a
0:21-21 bg=#3a3a3a
0:22-44 fg=#3fb950 bg=#3a3a3a
0:45-47 fg=#949494 bg=#3a3a3a
0:48-68 bg=#3a3a3a
0:69-69 fg=#d29922 bg=#3a3a3a
0:71-71 bg=#3a3a3a
0:72-72 fg=#d29922 bg=#3a3a3a BOLD
0:73-74 bg=#3a3a3a
0:75-75 fg=#f85149 bg=#3a3a3a
0:77-77 bg=#3a3a3a
0:78-78 fg=#f85149 bg=#3a3a3a BOLD
0:79-79 bg=#3a3a3a
1:0-4 fg=#ffe066
1:5-18 fg=#ffe066 BOLD
1:19-79 fg=#ffe066
2:0-0 fg=#ffe066
2:2-52 fg=#949494
2:79-79 fg=#ffe066
3:0-0 fg=#ffe066
3:79-79 fg=#ffe066
4:0-0 fg=#ffe066
4:1-1 bg=#303030
4:2-2 fg=#ffe066 bg=#303030
4:3-3 bg=#303030
4:4-7 bg=#303030 BOLD
4:8-9 bg=#303030
4:10-21 fg=#949494 bg=#303030
4:22-78 bg=#303030
4:79-79 fg=#ffe066
5:0-0 fg=#ffe066
5:4-7 BOLD
5:10-21 fg=#949494
5:79-79 fg=#ffe066
6:0-0 fg=#ffe066
6:79-79 fg=#ffe066
7:0-0 fg=#ffe066
7:79-79 fg=#ffe066
8:0-0 fg=#ffe066
8:79-79 fg=#ffe066
9:0-0 fg=#ffe066
9:79-79 fg=#ffe066
10:0-0 fg=#ffe066
10:79-79 fg=#ffe066
11:0-0 fg=#ffe066
11:79-79 fg=#ffe066
12:0-0 fg=#ffe066
12:79-79 fg=#ffe066
13:0-0 fg=#ffe066
13:79-79 fg=#ffe066
14:0-0 fg=#ffe066
14:79-79 fg=#ffe066
15:0-0 fg=#ffe066
15:79-79 fg=#ffe066
16:0-0 fg=#ffe066
16:79-79 fg=#ffe066
17:0-0 fg=#ffe066
17:79-79 fg=#ffe066
18:0-0 fg=#ffe066
18:79-79 fg=#ffe066
19:0-0 fg=#ffe066
19:79-79 fg=#ffe066
20:0-0 fg=#ffe066
20:79-79 fg=#ffe066
21:0-0 fg=#ffe066
21:79-79 fg=#ffe066
22:0-79 fg=#ffe066
23:1-1 fg=#2dc2ad BOLD
23:10-10 fg=#2dc2ad BOLD
23:16-16 fg=#2dc2ad BOLD
23:24-28 fg=#2dc2ad BOLD
23:73-73 fg=#2dc2ad BOLD
